--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "expo-font": "~10.2.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
+    "phosphor-react-native": "^1.1.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-svg": "12.3.0",
+    "react-native-svg-transformer": "^1.0.0",
     "react-native-web": "~0.18.7",
     "styled-components": "^5.3.6"
   },
