ignite-react-native-aula-2: finalizado modulo 2

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -40,6 +40,7 @@
     "react/jsx-props-no-spreading": "off",
     "react/no-unstable-nested-components": "off",
     "@typescript-eslint/no-namespace":"off",
+    "no-useless-catch":"off",
     "react/jsx-filename-extension": [
       1,
       {
